<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="oliva.gianfranco.tiboxtest.view.fragment.CustomerDetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_dni"
                android:maxLength="8"
                android:inputType="number"
                android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:imeOptions="actionNext"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_lastname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:imeOptions="actionDone"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_photo_gallery"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_take_photo"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_delete_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete_customer"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_save_customer"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_customer"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>
